# chemschema

./: .gitignore  README.md
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml
backend/: README.md  pyproject.toml
backend/chemschema/: __init__.py  admin.py  apps.py  chemistry.py  grpc_servicer.py  models.py  schemas.py  serializers.py  urls.py  views.py
backend/chemschema/management/commands/: generate_proto.py
backend/chemschema/migrations/: 0001_initial.py  __init__.py
backend/proto/: chemschema.proto
backend/tests/: settings.py  test_grpc.py  test_views.py  urls.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.theme.ts  tsconfig.json  vite.config.js  vite.config.ts  vite.lib.config.js  vite.lib.config.ts
frontend/demo/: App.tsx  App.vue  main.ts
frontend/src/: index.js  index.ts  style.css
frontend/src/__tests__/: chemistry.test.js  chemistry.test.ts
frontend/src/components/: AtomLabel.tsx  AtomLabel.vue  BondRenderer.tsx  BondRenderer.vue  ChemEditor.tsx  ChemEditor.vue  DrawingCanvas.tsx  DrawingCanvas.vue  ExportDialog.tsx  ExportDialog.vue  ReactionEditor.tsx  ReactionEditor.vue  Toolbar.tsx  Toolbar.vue
frontend/src/composables/: useGrpc.js  useGrpc.ts  useMolecule.js  useMolecule.ts  useRest.js  useRest.ts
frontend/src/lib/chemistry/: atom.js  atom.ts  bond.js  bond.ts  layout2d.js  layout2d.ts  molecule.js  molecule.ts  molfile.js  molfile.ts  reaction.js  reaction.ts  smiles.js  smiles.ts
frontend/src/lib/grpc/: client.js  client.ts
frontend/src/lib/rest/: client.js  client.ts
